--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pandas~=2.2.2
-emoji~=2.14.1
-nltk~=3.9.1
-urlextract~=1.9.0
-wordcloud~=1.9.4
-vadersentiment~=3.3.2
-gensim~=4.3.3
-reportlab~=4.4.1
-streamlit~=1.37.1
-pyldavis~=3.4.1
-seaborn~=0.13.2
-matplotlib~=3.9.2
+pandas
+emoji
+nltk
+urlextract
+wordcloud
+vadersentiment
+gensim
+reportlab
+streamlit
+pyldavis
+seaborn
+matplotlib
